# SmockingTessellations

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp
cut/: auxetic_pattern.cpp  auxetic_pattern.h  cut_boundary_faces.cpp  cut_boundary_faces.h  cut_to_disk.cpp  cut_to_disk.h
gui/: main_menu.cpp  main_menu.h
io/: load_mesh.cpp  load_mesh.h  save_mesh.cpp  save_mesh.h
layout/: optimize.cpp  optimize.h
libcache/: combing.cpp  combing.h  power_field.cpp  power_field.h  power_to_raw.cpp  power_to_raw.h  principal_matching.cpp  principal_matching.h  remeshing.cpp  remeshing.h
parameterization/: convert.cpp  convert.h  grid_param.cpp  grid_param.h  param.cpp  param.h  pullback.cpp  pullback.h  remeshing.cpp  remeshing.h  utils.cpp  utils.h
smocking_pattern/: Tangram.cpp  Tangram.h  UnitSmockingPattern.cpp  UnitSmockingPattern.h
state/: state.cpp  state.h
utils/: Hmesh.cpp  Hmesh.h  ModifiedMesh.h  construct.h  conversions.h  find_duplicates.cpp  find_duplicates.h  point_in_param.cpp  point_in_param.h  replicate.h  slicing.h  vecops.h
view/: manager.cpp  manager.h  smocking.cpp  smocking.h
visualization/: prepare_arap.cpp  prepare_arap.h  seamless_arap.cpp  seamless_arap.h
